--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -8,17 +8,7 @@
 
 
 
-    <style type="text/css">
-      #map-canvas {
-        float: left;
-      }
 
-      #results {
-        width: 350px;
-        float: left;
-        margin-left: 10px;
-      }
-    </style>
 
     <script type="text/javascript"
       src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCbg51WWe-aHLe75W2brgFQRdqOoflry8o&sensor=true">
@@ -84,8 +74,7 @@
     </script>
   </head>
 
-  <body>
-    <div id="map-canvas"></div>
-    <div id="results"></div>
+  <body onload="initialize()">
+    <div id="map_canvas" style="width:100%; height:100%"></div>
   </body>
 </html>
