--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -6,7 +6,17 @@
 
     <title>Fusion Tables Layer Example: Driving Directions</title>
 
+<style type="text/css">
+      #map-canvas {
+        float: left;
+      }
 
+      #results {
+        width: 350px;
+        float: left;
+        margin-left: 10px;
+      }
+    </style>
 
 
 
