percentages in style

--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -7,9 +7,9 @@
     <title>Fusion Tables Layer Example: Driving Directions</title>
 
 <style type="text/css">
-      #map-canvas {
-        float: left;
-      }
+      html { height: 100% }
+      body { height: 100%; margin: 0; padding: 0 }
+      #map_canvas { height: 100% }
 
       #results {
         width: 350px;
