--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -85,6 +85,7 @@
   </head>
 
   <body onload="initialize()">
-    <div id="map_canvas" style="width:100%; height:100%"></div>
+    <div id="map-canvas"></div>
+    <div id="results"></div>
   </body>
 </html>
