--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -6,12 +6,17 @@
 
     <title>Fusion Tables Layer Example: Driving Directions</title>
 
-<style type="text/css">
-      html { height: 100% }
-      #map_canvas { height: 100% }
+ <link href="/example.css"
+        rel="stylesheet" type="text/css">
+
+    <style type="text/css">
+      #map-canvas {
+        float: left;
+      }
 
       #results {
         width: 350px;
+        float: left;
         margin-left: 10px;
       }
     </style>
@@ -82,7 +87,7 @@
     </script>
   </head>
 
-  <body onload="initialize()">
+  <body>
     <div id="map-canvas"></div>
     <div id="results"></div>
   </body>
