--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -6,17 +6,12 @@
 
     <title>Fusion Tables Layer Example: Driving Directions</title>
 
- <link href="/example.css"
-        rel="stylesheet" type="text/css">
-
-    <style type="text/css">
-      #map-canvas {
-        float: left;
-      }
+<style type="text/css">
+      html { height: 100% }
+      #map_canvas { height: 100% }
 
       #results {
         width: 350px;
-        float: left;
         margin-left: 10px;
       }
     </style>
@@ -87,7 +82,7 @@
     </script>
   </head>
 
-  <body>
+  <body onload="initialize()">
     <div id="map-canvas"></div>
     <div id="results"></div>
   </body>
