--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -6,7 +6,7 @@
 
     <title>Fusion Tables Layer Example: Driving Directions</title>
 
- <link href="/apis/fusiontables/docs/samples/style/default.css"
+ <link href="/example.css"
         rel="stylesheet" type="text/css">
 
     <style type="text/css">
