first of two tests
moving the maps script

--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -4,10 +4,14 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
 
-    <title>Fusion Tables Layer Example: Driving Directions</title>
+    <title>Fusion Tables Layer Example</title>
 
  <link href="example.css"
         rel="stylesheet" type="text/css">
+
+    <script type="text/javascript"
+      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCbg51WWe-aHLe75W2brgFQRdqOoflry8o&sensor=true">
+    </script>
 
     <style type="text/css">
       #map-canvas {
@@ -23,9 +27,7 @@
 
 
 
-    <script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCbg51WWe-aHLe75W2brgFQRdqOoflry8o&sensor=true">
-    </script>
+
 
     <script type="text/javascript">
 
