--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -49,8 +49,8 @@
 
         var layer = new google.maps.FusionTablesLayer({
           query: {
-            select: '\'Location\'',
-            from: '16NP68tY2xoaRXoJGWo7OJ9WyJKd8vrptlP30HtE'
+            select: 'Location',
+            from: '1ejXvdpkrru4MAssBa90SF5O9jhl4a6CdES8bbg'
           },
           map: map,
           options: {
