--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -10,8 +10,7 @@
         rel="stylesheet" type="text/css">
 
     <script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCbg51WWe-aHLe75W2brgFQRdqOoflry8o&sensor=true">
-    </script>
+        src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
     <style type="text/css">
       #map-canvas {
