--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -51,6 +51,8 @@
             select: '\'Location\'',
             from: '16NP68tY2xoaRXoJGWo7OJ9WyJKd8vrptlP30HtE'
           },
+          google.maps.event.trigger(map, 'resize'); 
+          map.setZoom(map.getZoom()); 
           map: map,
           options: {
             suppressInfoWindows: true
