hybrid to roadmap - NOW LIVE

--- a/fusionmapstest.html
+++ b/fusionmapstest.html
@@ -33,7 +33,7 @@
       function initialize() {
 
         var map = new google.maps.Map(document.getElementById('map-canvas'), {
-          mapTypeId: google.maps.MapTypeId.HYRBID,
+          mapTypeId: google.maps.MapTypeId.ROADMAP,
           center: new google.maps.LatLng(38.438472,-78.873727),
           zoom: 15,
         });
@@ -48,7 +48,7 @@
 
         var layer = new google.maps.FusionTablesLayer({
           query: {
-            select: '\'Location\'',
+            select: '\'Current Location\'',
             from: '16NP68tY2xoaRXoJGWo7OJ9WyJKd8vrptlP30HtE'
           },
           map: map,
